GD-188: add `jpackage` job