@@ -5,7 +5,56 @@ sourceSets.main.resources.srcDirs = ["../assets"]
 project.ext.mainClassName = "com.mygdx.game.DesktopLauncher"
 project.ext.assetsDir = new File("../assets")
 
+def osName = System.getProperty('os.name').toLowerCase(Locale.ROOT)
+
 import org.gradle.internal.os.OperatingSystem
+
+// creates a slim JDK runtime for distribution
+tasks.register('createRuntime', Exec) {
+    doFirst() {
+        project.delete("${buildDir}/runtime")
+    }
+    String runtimePath = "${buildDir}/runtime"
+
+    workingDir project.projectDir
+    commandLine = [
+            "jlink",
+            '--add-modules', 'java.base,java.desktop,jdk.unsupported',
+            '--strip-debug',
+            '--no-header-files',
+            '--no-man-pages',
+            '--strip-native-commands',
+            "--vm=server",
+            "--compress=2",
+            '--output', runtimePath
+    ]
+}
+
+// creates application bundle (executable + runtime)
+tasks.register('jpackage', Exec) {
+    dependsOn dist
+    doFirst() {
+        project.delete("${buildDir}/distribution/$project.appName")
+    }
+    dependsOn createRuntime
+    workingDir project.projectDir
+    def commands = [
+            "jpackage",
+            '--dest', "${buildDir}/distribution",
+            '--input', "${buildDir}/libs",
+            '--name', project.appName,
+            '--main-class', project.mainClassName,
+            '--main-jar', jar.archiveFile.get().asFile.getName(),
+            '--runtime-image', "${buildDir}/runtime",
+    ]
+
+    if (osName.contains('mac')) {
+        commands << '--java-options'
+        commands << "-XstartOnFirstThread"
+    }
+
+    commandLine = commands
+}
 
 tasks.register('run', JavaExec) {
     dependsOn classes
